# swc-plugin-component-id

./: .gitignore  Cargo.toml  package-lock.json  package.json
src/: lib.rs
test/: index.test.js
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
transform/tests/fixture/simple/: input.tsx  output.tsx
