[package]
name = "react_component_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
swc_atoms = "0.6.4"
swc_cached = "0.3.18"
swc_common = "0.33.8"
swc_core = { version = "0.86.85", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.110.9"
swc_ecma_parser = "0.141.22"
swc_ecma_visit = "0.96.9"

[dev-dependencies]
swc_ecma_parser = "0.141.22"
swc_ecma_transforms_base = "0.134.31"
swc_ecma_transforms_testing = "0.137.33"
testing = "0.35.10"
